tree-sitter-ggsql/grammar.js
    query: $ => seq(
      optional($.sql_portion),
      repeat(choice($.visualise_statement, $.tabulate_statement))
    ),

    // SQL portion - multiple statements separated by semicolons
    sql_portion: $ => choice(
      // Multiple statements with semicolons
      prec.right(seq(
        $.sql_statement,
        repeat1(seq(';', optional($.sql_statement))),
        optional(';')
      )),
      // Single statement (no semicolon before VISUALISE)
      $.sql_statement
    ),

    // A single SQL statement - order matters! More specific first
    sql_statement: $ => choice(
      $.with_statement,  // Check WITH first (can contain SELECT)
      $.select_statement,
      $.create_statement,
      $.insert_statement,
      $.update_statement,
      $.delete_statement,
      $.from_statement,  // DuckDB-style FROM-first: `FROM t` ≡ `SELECT * FROM t`
      $.other_sql_statement  // Fallback for other SQL
    ),

    // Bare FROM as a terminal SQL statement (DuckDB-style). Starts with a
    // from_clause and optionally consumes trailing tokens (WHERE, GROUP BY,
    // ORDER BY, LIMIT, etc.) up to VISUALISE — mirrors select_body's permissive
    // token bag so the same trailing-SQL constructs work after a bare FROM.
    select_statement: $ => prec(2, seq(
      caseInsensitive('SELECT'),
      $.select_body
    )),

    select_body: $ => prec.left(repeat1(choice(
      $.from_clause,
      $.window_function,  // Window functions like ROW_NUMBER() OVER (...)
      $.case_expression,  // CASE WHEN ... THEN ... END
      $.cast_expression,  // CAST(expr AS type), TRY_CAST(expr AS type)
      $.function_call,    // Regular function calls like COUNT(), SUM()
      $.jinja_template,
      $.sql_keyword,
      $.string,
      $.number,
      ',', '*', '.', '=', '<', '>', '!', '+', '-', '/', '%', '|', '&', '^', '~', '::',
      $.subquery,
      $.identifier
    ))),

    // WITH statement (CTEs) - tail is an optional SELECT or bare FROM
    // (`WITH cte AS (...) FROM cte` is DuckDB-style FROM-first after WITH).
    qualified_name: $ => prec.right(seq(
      $.identifier,
      repeat(seq('.', $.identifier))
    )),

    table_ref: $ => prec.right(seq(
      choice(
        field('table', $.source_ref),
        $.subquery,
      ),
      optional(seq(
        optional(caseInsensitive('AS')),
        field('alias', $.identifier)
      ))
    )),

    from_clause: $ => prec.right(1, seq(
      token(prec(1, caseInsensitive('FROM'))),
      $.table_ref,
      repeat(seq(',', $.table_ref))
    )),

    // =========================================================================
    // TABULATE statement and sub-clauses
    // =========================================================================

    // TABULATE [* | col, col, ...] [FROM source] [FORMAT ...] ...
    tabulate_statement: $ => prec.dynamic(1, seq(
      $.tabulate_keyword,
      optional($.tab_col_list),
      optional($.tab_from_clause),
      repeat($.tab_clause)
    )),

    tabulate_keyword: $ => token(prec(10, caseInsensitive('TABULATE'))),

    // Column list: wildcard or explicit comma-separated names
    tab_col_list: $ => seq(
      choice('*', $.identifier),
      repeat(seq(',', $.identifier))
    ),

    // FROM <source> inside a TABULATE statement
    tab_from_clause: $ => seq(
      token(prec(1, caseInsensitive('FROM'))),
      field('source', $.identifier)
    ),

    // Sub-clauses allowed inside a TABULATE statement
    tab_clause: $ => choice($.format_clause, $.label_clause),

    // FORMAT [SPAN | STUB] col [, col ...] [AS span_id]
    //   [SETTING key => value, ...]
    //   [RENAMING lhs => rhs, ...]
    format_clause: $ => prec.right(seq(
      $.format_keyword,
      optional($.format_mode),
      $.identifier,
      repeat(seq(',', $.identifier)),
      optional(seq(caseInsensitive('AS'), field('span_id', $.identifier))),
      optional($.format_setting_block),
      optional($.format_renaming_block)
    )),

    format_keyword: $ => token(prec(5, caseInsensitive('FORMAT'))),

    format_setting_block: $ => seq(
      token(prec(2, caseInsensitive('SETTING'))),
      $.format_setting_pair,
      repeat(seq(',', $.format_setting_pair))
    ),

    format_setting_pair: $ => seq(
      field('name', $.identifier),
      '=>',
      field('value', choice($.string, $.number, $.boolean))
    ),

    bare_identifier: $ => token(/[a-zA-Z_][a-zA-Z0-9_]*/),
    identifier: $ => choice(
      $.bare_identifier,
      $.quoted_identifier
    ),

    // Jinja templates are opaque SQL-side tokens. dbt/fusion renders these
    // before ggsql executes SQL, but the parser must preserve them while
    // splitting SQL from VISUALISE.
    boolean: $ => choice('true', 'false'),
